# automation_basic

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
automation_basics/arduino_like_api/: arduino_device.py
automation_basics/arduino_like_api/test/: test_api.py
automation_basics/common/: __init__.py  helpers.py  test_common.py
automation_basics/demo_ftdi/: main.py
automation_basics/emulaton_demo/: device.py  main.py
automation_basics/generative_api/: generate.py  tmp_class.py
automation_basics/generative_api/tests/: conftest.py  test_for_str.py
automation_basics/serialize/: serialize.py
automation_basics/serialize/tests/: conftest.py  test_serialize.py
automation_basics/simple_functions/: main.py
automation_basics/test_demo/: client.py  conftest.py  test_demo.py  test_request_mock.py
automation_basics/zmq_demo/: client.py
docs/helpfull_refs/: redirect.html
docs/source/: conf.py  index.rst  modules.rst
docs/source/_templates/: layout.html
docs/source/api/: automation_basics.arduino_like_api.rst  automation_basics.arduino_like_api.test.rst  automation_basics.common.rst  automation_basics.demo_click.rst  automation_basics.demo_ftdi.rst  automation_basics.emulaton_demo.rst  automation_basics.gen_methods.rst  automation_basics.generative_api.gen.rst  automation_basics.generative_api.rst  automation_basics.generative_api.tests.rst  automation_basics.rst  automation_basics.serialize.rst  automation_basics.serialize.tests.rst  automation_basics.simple_functions.rst  automation_basics.test_demo.rst  automation_basics.zmq_demo.rst  modules.rst
docs/source/tutorials/: ctypes.rst  direct_debug.rst  docker.rst  emulation.rst  ftdi.rst  generative_api.rst  git.rst  linux.rst  publish.rst  pytest.rst  remote.rst  rpi.rst  ruff.rst  signal_analyze.rst  systemd.rst  uv.rst
src/automation_basics/arduino_like_api/: arduino_device.py
src/automation_basics/arduino_like_api/test/: __init__.py  conftest.py  test_api.py
src/automation_basics/common/: __init__.py  helpers.py  test_common.py
src/automation_basics/demo_click/: demo_click.py
src/automation_basics/demo_ftdi/: main.py
src/automation_basics/emulaton_demo/: device.py  main.py
src/automation_basics/gen_methods/: gen_methods_main.py
src/automation_basics/generative_api/: generate.py  tmp_class.py
src/automation_basics/generative_api/tests/: conftest.py  test_for_str.py
src/automation_basics/serialize/: serialize.py
src/automation_basics/serialize/tests/: conftest.py  test_serialize.py
src/automation_basics/simple_functions/: main.py
src/automation_basics/test_demo/: client.py  conftest.py  test_demo.py  test_request_mock.py
src/automation_basics/zmq_demo/: client.py  demo_pub.py  demo_sub.py  server.py
